style/summary_login/login_responsive.css
@media (max-width: 1100px) {
    .login-card {
        max-width: 650px;
    }
}

@media (max-width: 1000px) {
    .login-header {
        position: static;
        margin-top: 24px;
        display: flex;
        justify-content: center;
        align-items: center;
        gap: 12px;
        order: 2;
    }

    .login-header-text {
        font-size: 14px;
        text-align: center;
    }

    .signup-button {
        padding: 10px 16px;
        font-size: 14px;
    }

    .login-footer {
        position: static;
        margin-top: auto;
        padding-bottom: 24px;
        display: flex;
        justify-content: center;
        gap: 16px;
        flex-wrap: wrap;
        order: 3;
    }
}

@media (max-width: 900px) {
    .login-card {
        max-width: 600px;
    }
}

@media (max-width: 768px) {

    .login-wrapper {
        justify-content: flex-start;
        align-items: center;
    }

    .login-logo-section {
        position: static;
        align-self: flex-start;
        margin-left: 24px;
        margin-top: 24px;
        margin-bottom: 16px;
    }

    .login-logo {
        width: 72px;
    }

    .login-container {
        margin-top: 50px;
        width: 100%;
        max-width: 100%;
        display: flex;
        flex-direction: column;
        align-items: center;
    }

    .login-card {
        position: static;
        width: 100%;
        max-width: 450px;
        margin-top: 24px;
        order: 1;
    }

    .login-footer {
        margin-top: 140px;
    }
}

@media (max-width: 700px) {
    .login-card {
        max-width: 400px;
    }
}

@media (max-width: 600px) {
    .login-card {
        max-width: 380px;
    }
}

@media (max-width: 530px) {
    .login-card {
        max-width: 310px;
    }
    .login-title {
        font-size: 47px;
    }
}

@media (max-width: 450px) {
    .login-card {
        max-width: 280px;
        padding: 48px 28px;
        }

     .login-buttons {
        flex-direction: column;
        gap: 12px;
    }

    .login-title {
        font-size: 43px;
    }
    
    .login-logo {
        width: 60px;
    }

    .login-footer {
        margin-top: 60px;
        padding-bottom: 32px;
        display: flex;
        justify-content: center;
        gap: 16px;
        flex-wrap: wrap;
        order: 3;
    }
}

@media (max-width: 400px) {
    .login-error-message.login-error-message {
        font-size: 14px;
    }
}

@media (max-width: 365px) {
    .login-card {
        max-width: 240px;
    }

    .login-buttons button{
        font-size: 18px;
    }

    .login-logo {
        width: 50px;
    }

}

@media (min-width: 900px) and (max-width: 1100px) and (max-height: 700px) {
    .login-footer {
        margin-top: 60px;
        padding-bottom: 40px;
    }
}

@media (min-width: 480px) and (max-width: 600px) and (min-height: 650px) and (max-height: 800px) {
    .login-footer {
        margin-top: 56px;
        padding-bottom: 40px;
    }
}

